src/app/search/search.component.scss
.content-search {
    position: relative;
    top: 97px;
    max-width: 92%;
    margin: 0 auto;
}

.search-align {
    position: relative;
    width: 100%;
    margin: 0 auto;
}

.placeLabel {
    position: absolute;
    top: 22px;
    left: 12px;
    color: #a3a1a1;
    font-weight: bold;
    font-size: 14px;
    z-index: 1;
    overflow: hidden;
    transition: 0.3s ease;
}

.placeLabel.hidden {
    display: none;
}

.placeLabel span {
    display: inline-block;
    opacity: 0;
    animation: slideUp 2.5s ease-out infinite;
    animation-delay: 0s;
}


@keyframes slideUp {
    10% {
        opacity: 0;
        transform: translateY(20px);
    }

    50% {
        opacity: 1;
        transform: translateY(0);
    }

    70% {
        opacity: 1;
        transform: translateY(0);
    }

    100% {
        opacity: 0;
        transform: translateY(-20px);
    }
}

.input-with-end-icon {
    width: 100%;
    height: 50px;
    padding-right: 40px;
    padding-left: 15px;
    border: 2px solid #c3b9b9;
    border-radius: 25px;
    box-shadow: 0 1px .5px rgba(var(--shadow-rgb), .13);
    --shadow-rgb: 11, 20, 26 font-size: 16px;
    // transition: all 0.5s ease-in-out;
}

.input-with-end-icon:focus {
    border: 3px solid #dcdfe6 !important;
    outline: none;
}

.icon-end-input {
    position: absolute;
    top: 30px;
    right: 18px;
    transform: translateY(-50%);
    font-size: 1.5em;
    color: #b3a9a9;
    cursor: pointer;
    transition: all 0.5s ease-in-out;
}

.chip-spacing {
    position: relative;
    display: flex;
    margin: 14px 10px 0px 0px;
    flex-wrap: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
    scroll-behavior: smooth;
}

.chip-spacing::-webkit-scrollbar {
    display: none;
}

.chip-spacing {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

.chip {
    width: auto;
    height: 43px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 14px;
    background: #dcdfe6;
    border-radius: 74px;
    margin: 5px;
}

.divider {
    font-size: 18px;
    position: absolute;
    right: 50px;
    font-weight: bold;
    color: #b5afaf;
    height: 39px;
    top: 17px;
    opacity: 0;
    // transform: translateX(100%);
   
}
.showDivider {
    opacity: 1;
    animation: showLine 0.5s ease-in-out;
}

.hideDivider {
    opacity: 0;
    animation: hideLine 0.4s ease-in-out;
}

.close-icon{
    opacity: 1;
    animation: showLine 0.5s ease-in-out; 
}

.close-icon-hide{
    opacity: 0;
    animation: hideLine 0.4s ease-in-out; 
}

@keyframes hideLine{
    0% {
        transform: translateX(0%);
        opacity: 1;
    }
    100%{
        transform: translateX(100%);
        opacity: 0;
    }
}

@keyframes showLine{
    0% {
        transform: translateX(100%);
        opacity: 0;
    }
    100%{
        transform: translateX(0%);
        opacity: 1;
    }
}

.chip-text p {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0px;
    margin: 0px;
}

.chip-icon {
    position: relative;
    top: 3px;
    margin-right: 3px;
    font-size: 1.5em;
}

